src/components/assistance.module.css
.container{
	padding: 20px;
	justify-content: space-between;
	display: flex;
	flex-wrap: wrap;
}

.product{
	position: relative;
	flex-grow: 1;
	margin-top: 40px;
	margin-left: 20px;
	margin-right: 10px;
	justify-content: center;
	align-items: left;
	display: flex;
	flex-direction: column;
	text-align: center;
	width: 600px;
	height: 350px;
	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.11);
	border-radius: 20px;
}
.product:hover{
	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.32);
}

.productImageContainer{
	width: 300px;

}

.productImage{
  max-width: 100%;
    height: auto;

}

.productName{
	font-size: 25px;
	margin-left: 36px;
    margin-bottom: 50px;
    display: inline-block;
}

.overlay {
    display:  none;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: 0;
    transition: .5s ease;
    background-color: #008CBA;
    border-radius: 15px;
  }

  .product:hover .overlay {
    display: block;
    opacity: 0.8;
  }
  .text {
    color: white;
    font-size: 20px;
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    text-align: center;
  }

